package javaloveu.hfdp.strategy.simuduck;

public interface QuackBehavior {
    void quack();
}
